# tpch_runner

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start_server.sh
docs/: user_guide.md
pydbgen/: __init__.py  app.py  config.py
pydbgen/tpch/: __init__.py  gen_tool.py  gen_tool.sh  injection.py  qgen
pydbgen/tpch/databases/: __init__.py  base.py  mysqldb.py  pgdb.py  results.py
pydbgen/tpch/schema/mysql/: table_schema.sql
pydbgen/tpch/schema/pg/: pg_index.sql
pydbgen/tpch/templates/: 13.sql  4.sql
tests/: conftest.py  test_base_commands.py  test_power_commands.py
tests/commands/: test_base_commands.py  test_db_commands.py  test_power_commands.py  test_result_commands.py  test_run_commands.py  test_utils.py
tests/databases/: test_meta.py  test_meta_v1.py
tpch_runner/: __init__.py  app.py  config.py  meta.py
tpch_runner/commands/: __init__.py  base_commands.py  db_commands.py  power_commands.py  result_commands.py  run_commands.py  server_commands.py  utils.py
tpch_runner/tpch/: __init__.py  datagen.py  gen_tool.sh  injection.py
tpch_runner/tpch/answer/small/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
tpch_runner/tpch/data/: customer.csv  lineitem.csv  orders.csv  part.csv  partsupp.csv  supplier.csv
tpch_runner/tpch/databases/: base.py  duckdb.py  meta.py  mysqldb.py  pgdb.py  rapidsdb.py  results.py
tpch_runner/tpch/schema/duckdb/: table_schema.sql
tpch_runner/tpch/schema/mysql/: after-load.sql  mysql_index.sql  mysql_pkeys.sql  table_schema.sql
tpch_runner/tpch/schema/pg/: README.txt  pg_constraints.sql  pg_index.sql  table_schema.sql
tpch_runner/tpch/schema/rapidsdb/: load.sql  table_schema.sql
tpch_runner/tpch/schema/rapidsdb/queries/: q15.sql
tpch_runner/tpch/schema/rdp/: load.sql  table_schema.sql
tpch_runner/tpch/templates/: 1.sql  11.sql  12.sql  14.sql  15.sql  16.sql  17.sql  19.sql  20.sql  22.sql  5.sql  6.sql  7.sql  8.sql  9.sql
tpch_runner/tpch/tool/: dbgen
